# wechat-media-ingest

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE.md  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
LICENSES/: crawl-wechat-MIT.txt
docs/: MANIFEST.md  PUBLISHING.md  VALIDATION.md
skills/wechat-media-ingest/: SKILL.md
skills/wechat-media-ingest/agents/: openai.yaml
src/wechat_media_ingest/: __init__.py  cli.py  errors.py  manifest.py  normalize.py  pipeline.py  schema.py  security.py  verify.py
src/wechat_media_ingest/download/: __init__.py  assets.py
src/wechat_media_ingest/fetch/: __init__.py  browser.py  http.py
src/wechat_media_ingest/parse/: __init__.py  article.py  native_video.py
src/wechat_media_ingest/schemas/: __init__.py  manifest-v1.schema.json
tests/: test_article_parser.py  test_cli.py  test_download.py  test_fetch_errors.py  test_import_html.py  test_manifest_verify.py  test_normalize.py  test_parser_fixtures.py  test_rerun.py  test_schema_resource.py  test_skill.py
tests/fixtures/: article_captcha.html  article_deleted.html  article_images.html  article_native_video.html  article_text_only.html
