[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "wechat-media-ingest"
version = "0.2.0"
description = "Archive public WeChat articles, images, and native videos with verifiable manifests."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Teaftc" }]
keywords = ["wechat", "weixin", "archive", "media", "manifest"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "jsonschema>=4.22,<5",
  "lxml>=5,<7",
  "markdownify>=0.13,<2",
]

[project.optional-dependencies]
browser = ["playwright>=1.45,<2"]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.6,<1"]

[project.scripts]
wechat-media-ingest = "wechat_media_ingest.cli:main"

[project.urls]
Homepage = "https://github.com/Teaftc/wechat-media-ingest"
Issues = "https://github.com/Teaftc/wechat-media-ingest/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_media_ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
